@@ -1,5 +1,11 @@
 2013-07-16  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DObject.h:
+	* SFString.h:
+	* SFString.cpp: 
+
+2013-07-16  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3D.h:
 	* RegEx.h:
 	* RegEx.cpp: 
