@@ -1,5 +1,10 @@
 2013-07-16  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineCellRenderer.h:
+	* OutlineCellRenderer.cpp: 
+
+2013-07-16  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* OutlineTreeView.cpp:
 	* OutlineCellRenderer.cpp: 
 
